change .btn to btn-lass-lect so tak conflict with loginsignup btn in globals, fixed the broken button BUT NOT YET FIX BROKEN GAP

--- a/src/styles/my-class-lect.css
+++ b/src/styles/my-class-lect.css
@@ -302,7 +302,7 @@
   gap: 0.75rem;
 }
 
-.btn {
+.btn-class-lect {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 6px;
